istio/canary/bar_deploy-v2.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata: 
  labels: 
    app: bar
    version: v2
  name: bar-v2
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app:  bar
      version: v2
  strategy: 
    type: RollingUpdate
  template: 
    metadata: 
      labels: 
        app:  bar
        version: v2
    spec: 
      containers: 
        - image: python
          imagePullPolicy: Always
          name:  bar
          ports: 
            - containerPort: 5000
          command:
            - "/bin/sh"
          args:
            - "-c"
            - |
              set -xe
              pip install flask
              /app/app.py
              
          volumeMounts:
            - name: app
              mountPath: /app
      
      volumes:
        - name: app
          configMap:
            defaultMode: 0755
            name:  bar-script
