istio/canary/bar_svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name:  bar
  labels:
    app:  bar
spec:
  selector:
    app:  bar
  ports:
  - name: http-test
    port: 5000
