istio/canary/destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bar
spec:
  host: bar
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
