istio/canary/route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bar
spec:
  hosts:
  - bar
  http:
  - route:
    - destination:
        host: bar
        port:
          number: 5000
        subset: v1
      weight: 90
    - destination:
        host: bar
        port:
          number: 5000
        subset: v2
      weight: 10
