istio/canary/service_reg.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: svc-entry
spec:
  hosts:
  - files.pythonhosted.org
  ports:
  - number: 443
    name: https
    protocol: HTTPS

  location: MESH_EXTERNAL
  resolution: DNS
